# kleinduimpje-tapyr

./: .gitignore  app.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: deploy-shinylive.yml
kleinduimpje/logic/: utils.py
kleinduimpje/view/root/: server.py  ui.py
notebooks/: test-fsspec.py
tests/unit/: test_utils.py
