[project]
name = "kleinduimpje"
version = "0.2.0"
description = ""
authors = [{name = "Daniel Kapitan", email = "daniel@kapitan.net"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2025.10.0",
    "loguru>=0.7.2",
    "marimo>=0.18.1",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "rich>=13.8.1",
    "shiny>=1.1.0",
    "shinyswatch>=0.7.0",
]

[project.urls]
Repository = "https://github.com/dkapitan/kleinduimpje-tapyr"
Homepage = "https://kapitan.net/kleinduimpje-tapyr"

[tool.coverage.run]
source = ["kleinduimpje"]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "playwright>=1.47.0",
    "pre-commit>=3.8.0",
    "pyright>=1.1.380",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.2",
    "pytest-watch>=4.2.0",
    "ruff>=0.6.9",
    "rsconnect-python>=1.24.0",
    "shinylive>=0.8.4",
    "marimo>=0.18.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov . --cov-report=lcov:lcov.info --cov-report=term"
filterwarnings = [
    # This warning is caused by the `jupyter_client` package and is not relevant to us
    "ignore:Jupyter is migrating its paths to use standard platformdirs.*:DeprecationWarning:jupyter_client.connect"
]

[tool.kleinduimpje]
# Optional: Override repository configuration
# github_repo = "username/repo"
github_branch = "main"
gpx_folder = "data"
